fix draw feedback on mobile

--- a/src/components/draw-feedback.css
+++ b/src/components/draw-feedback.css
@@ -20,4 +20,7 @@
   border: 1px solid black;
   margin-bottom: 20px;
   background-color: white;
+  touch-action: none;
+  width: 400px;
+  height: 400px;
 }
